--- a/Presentation/Nop.Web/Views/Shared/_CreateOrUpdateAddress.cshtml
+++ b/Presentation/Nop.Web/Views/Shared/_CreateOrUpdateAddress.cshtml
@@ -32,28 +32,42 @@
             <span asp-validation-for="Company"></span>
         </div>
     }
-    @if (Model.CountryEnabled)
-    {
+    @if(Model.CountryId > 0){
         <div class="inputs">
             <label asp-for="CountryId" asp-postfix=":"></label>
-            <select asp-for="CountryId" asp-items="Model.AvailableCountries"
-                    data-trigger="country-select"
-                    data-url="@(Url.RouteUrl("GetStatesByCountryId"))"
-                    data-stateprovince="#@Html.IdFor(model => model.StateProvinceId)"
-                    data-loading="#states-loading-progress"></select>
-            <nop-required />
-            <span asp-validation-for="CountryId"></span>
+            <select asp-for="CountryId" readonly>
+                <option value="41" selected>Canada</option>
+            </select>
+        </div>
+    }else{
+        <div class="inputs" style="display: none;">
+            <label asp-for="CountryId" asp-postfix=":"></label>
+            <select asp-for="CountryId" readonly>
+                <option value="41" selected>Canada</option>
+            </select>
         </div>
     }
 
-    @if (Model.CountryEnabled && Model.StateProvinceEnabled)
+    @if (Model.StateProvinceEnabled)
     {
         <div class="inputs">
             <label asp-for="StateProvinceId" asp-postfix=":"></label>
-            <select asp-for="StateProvinceId" asp-items="Model.AvailableStates"
-                    data-trigger="state-select">
+            <select asp-for="StateProvinceId">
+                <option value="0" selected>Select state</option>
+                <option value="193">Alberta</option>
+                <option value="194">British Columbia</option>
+                <option value="195">Manitoba</option>
+                <option value="196">New Brunswick</option>
+                <option value="197">Newfoundland and Labrador</option>
+                <option value="198">Northwest Territories</option>
+                <option value="199">Nova Scotia</option>
+                <option value="200">Nunavut</option>
+                <option value="201">Ontario</option>
+                <option value="202">Prince Edward Island</option>
+                <option value="203">Quebec</option>
+                <option value="204">Saskatchewan</option>
+                <option value="205">Yukon Territory</option>
             </select>
-            <span id="states-loading-progress" style="display: none;" class="please-wait">@T("Common.Wait")</span>
             <span asp-validation-for="StateProvinceId"></span>
         </div>
     }
