--- a/Presentation/Nop.Web/Themes/Emporium/Content/css/480.css
+++ b/Presentation/Nop.Web/Themes/Emporium/Content/css/480.css
@@ -55,11 +55,11 @@
 	font-size: 0px;
 }
 
-.header-selectors-wrapper > div {
+/* .header-selectors-wrapper > div {
 
 	text-align: center;
 	margin-left: 180px;	
-}
+} */
 
 /* LEFT/RIGHT COLUMN */
 
