--- a/Presentation/Nop.Web/Themes/Emporium/Content/css/styles.css
+++ b/Presentation/Nop.Web/Themes/Emporium/Content/css/styles.css
@@ -1444,7 +1444,7 @@ td.product-picture {
 
 .admin-header-links {
   background-color: #333;
-  text-align: left;
+  text-align: center;
   color: #fff;
 }
 .admin-header-links .impersonate {
