hotfix: mobile my account

--- a/Presentation/Nop.Web/Themes/Emporium/Views/Shared/_Header.cshtml
+++ b/Presentation/Nop.Web/Themes/Emporium/Views/Shared/_Header.cshtml
@@ -8,7 +8,7 @@
     bool stickyCategoryMenuFlyout = true;
     bool showCategoriesInSideMenu = true;
 }
-<div>
+<div class="header">
     @await Component.InvokeAsync("Widget", new { widgetZone = PublicWidgetZones.HeaderBefore })
     <div class="header-upper" style="display: flex;">
         <div class="header-selectors-wrapper">
