--- a/Presentation/Nop.Web/Themes/Emporium/Views/Customer/Register.cshtml
+++ b/Presentation/Nop.Web/Themes/Emporium/Views/Customer/Register.cshtml
@@ -556,7 +556,7 @@
                 </div>
             }
             <div class="buttons">
-                <button type="submit" name="register-button" id="register-button" class="button-1 register-next-step-button" style="width: 30%; background-color: #444444;">@T("Account.Register.Button")</button>
+                <button type="submit" name="register-button" id="register-button" class="button-1 register-next-step-button">@T("Account.Register.Button")</button>
             </div>
         </form>
         <div class="external-authentication">
