UI: Header fix, Select state to Select Province

--- a/Presentation/Nop.Web/Areas/Admin/Views/Shared/EditorTemplates/Address.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Shared/EditorTemplates/Address.cshtml
@@ -96,7 +96,7 @@
     </div>
     <div class="col-md-9">
         <select asp-for="StateProvinceId" class="form-control select-box single-line">
-            <option selected="" value="0">Select state</option>
+            <option selected="" value="0">Select Province</option>
             <option value="193">Alberta</option>
             <option value="194">British Columbia</option>
             <option value="195">Manitoba</option>
