--- a/Presentation/Nop.Web/Views/Customer/Register.cshtml
+++ b/Presentation/Nop.Web/Views/Customer/Register.cshtml
@@ -259,7 +259,7 @@
                             <div class="inputs">
                                 <label asp-for="StateProvinceId" asp-postfix=":"></label>
                                 <select asp-for="StateProvinceId">
-                                    <option selected="" value="0">Select state</option>
+                                    <option selected="" value="0">Select Province</option>
                                     <option value="193">Alberta</option>
                                     <option value="194">British Columbia</option>
                                     <option value="195">Manitoba</option>
@@ -381,7 +381,7 @@
                                 <div class="inputs">
                                     <label asp-for="StateProvinceIdForShipping" asp-postfix=":"></label>
                                     <select asp-for="StateProvinceIdForShipping">
-                                        <option selected="" value="0">Select state</option>
+                                        <option selected="" value="0">Select Province</option>
                                         <option value="193">Alberta</option>
                                         <option value="194">British Columbia</option>
                                         <option value="195">Manitoba</option>
