--- a/Presentation/Nop.Web/Views/Shared/_CreateOrUpdateAddress.cshtml
+++ b/Presentation/Nop.Web/Views/Shared/_CreateOrUpdateAddress.cshtml
@@ -53,7 +53,7 @@
         <div class="inputs">
             <label asp-for="StateProvinceId" asp-postfix=":"></label>
             <select asp-for="StateProvinceId">
-                <option value="0" selected>Select state</option>
+                <option value="0" selected>Select Province</option>
                 <option value="193">Alberta</option>
                 <option value="194">British Columbia</option>
                 <option value="195">Manitoba</option>
